Problem6,7 commit